force-app/main/default/objects/VTXY_ControlAPILog__c/VTXY_ControlAPILog__c.object-meta.xml
<CustomObject>
    <description>Traceability and support</description>
    <label>Control API Log</label>
    <nameField>
        <label>Control API Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Control API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>