force-app/main/default/objects/VTXY_ControlAPILog__c/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <label>Duration_Ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>