force-app/main/default/objects/VTXY_ControlAPILog__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>23</length>
    <type>Text</type>
</CustomField>