force-app/main/default/objects/VTXY_ControlAPILog__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External system identifier</description>
    <label>External Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>