force-app/main/default/objects/VTXY_ControlAPILog__c/fields/Http_Status__c.field-meta.xml
<CustomField>
    <fullName>Http_Status__c</fullName>
    <label>Http_Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>