force-app/main/default/objects/VTXY_ControlAPILog__c/fields/Payload_Hash__c.field-meta.xml
<CustomField>
    <fullName>Payload_Hash__c</fullName>
    <label>Payload_Hash</label>
    <length>23</length>
    <type>Text</type>
</CustomField>