force-app/main/default/objects/VTXY_ControlAPILog__c/fields/Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Payload_JSON__c</fullName>
    <description>Safe JSON payload snapshot</description>
    <label>Payload JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>