force-app/main/default/objects/VTXY_ControlAPILog__c/fields/Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Processed_At__c</fullName>
    <description>Processing timestamp</description>
    <label>Processed At</label>
    <type>DateTime</type>
</CustomField>