force-app/main/default/objects/VTXY_ControlAPILog__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>Request_Id</label>
    <length>23</length>
    <required>true</required>
    <type>Text</type>
</CustomField>