force-app/main/default/objects/VTXY_ControlAPILog__c/fields/Subscriber_Org__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriber Org</label>
    <referenceTo>VTXY_SubscriberOrg__c</referenceTo>
    <relationshipLabel>Control API Logs</relationshipLabel>
    <relationshipName>Control_API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>